use gold for premium

--- a/packages/front-end/styles/theme.scss
+++ b/packages/front-end/styles/theme.scss
@@ -44,8 +44,8 @@
   --alert-danger-border-color: #f5c6cb;
   --alert-danger-color: #721c24;
 
-  --alert-premium-background-gradient-1: #ede2ef;
-  --alert-premium-background-gradient-2: #ebf3fe;
+  --alert-premium-background-gradient-1: #ffffff;
+  --alert-premium-background-gradient-2: #efe7fd;
 
   --border-color-100: #e0e2eb;
   --border-color-200: #dee2e6;
@@ -109,8 +109,8 @@
   --alert-danger-border-color: #{darken(#721c24, 0%)};
   --alert-danger-color: #f8d7da;
 
-  --alert-premium-background-gradient-1: #{darken(#ede2ef, 70%)};
-  --alert-premium-background-gradient-2: #{darken(#ebf3fe, 75%)};
+  --alert-premium-background-gradient-1: #424242;
+  --alert-premium-background-gradient-2: #503e74;
 
   --border-color-100: #616161;
   --border-color-200: #424242;
