--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -1974,9 +1974,11 @@ td.disabled {
   }
 }
 
-.form-control::placeholder {
-  font-style: italic;
-  opacity: 0.5;
+.form-group.metric-override {
+  .form-control::placeholder {
+    font-style: italic;
+    opacity: 0.75;
+  }
 }
 
 @import "./components/react-select.scss";
