generate event web hooks list item component w/ plop

--- a/packages/front-end/plop-templates/component.hbs
+++ b/packages/front-end/plop-templates/component.hbs
@@ -1,4 +1,4 @@
-import React, { ReactNode, FC } from "react";
+import React, { FC } from "react";
 
 type {{pascalCase component}}Props  = Record<string, never>; // TODO: Replace with props object
 
