--- a/packages/front-end/styles/theme.scss
+++ b/packages/front-end/styles/theme.scss
@@ -44,8 +44,8 @@
   --alert-danger-border-color: #f5c6cb;
   --alert-danger-color: #721c24;
 
-  --alert-premium-background-gradient-1: #ffffff;
-  --alert-premium-background-gradient-2: #efe7fd;
+  --alert-premium-background-gradient-1: #fcf8ff;
+  --alert-premium-background-gradient-2: #ece0ff;
 
   --border-color-100: #e0e2eb;
   --border-color-200: #dee2e6;
@@ -109,8 +109,8 @@
   --alert-danger-border-color: #{darken(#721c24, 0%)};
   --alert-danger-color: #f8d7da;
 
-  --alert-premium-background-gradient-1: #424242;
-  --alert-premium-background-gradient-2: #503e74;
+  --alert-premium-background-gradient-1: #5f5279;
+  --alert-premium-background-gradient-2: #3e256e;
 
   --border-color-100: #616161;
   --border-color-200: #424242;
