fix plop template for POST /resource

--- a/packages/back-end/plop-templates/controller.hbs
+++ b/packages/back-end/plop-templates/controller.hbs
@@ -74,7 +74,7 @@ type Create{{pascalCase resource}}Request = AuthRequest<
 >;
 
 type Create{{pascalCase resource}}Response = {
-  {{camelCase resource}}s: unknown[];
+  {{camelCase resource}}: unknown;
 };
 
 /**
