add body to put request code gen

--- a/packages/back-end/plop-templates/router.hbs
+++ b/packages/back-end/plop-templates/router.hbs
@@ -42,6 +42,11 @@ router.put(
         id: z.string(),
       })
       .strict(),
+    body: z
+      .object({
+        // TODO:
+      })
+      .strict(),
   }),
   {{camelCase resource}}Controller.put{{pascalCase resource}}
 );
