--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -1984,7 +1984,7 @@ td.disabled {
     padding: 2px;
   }
   .gb-select__indicator {
-    padding: 1;
+    padding: 1px;
     svg {
       width: 15px;
       height: 15px;
