--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -168,8 +168,9 @@ pre {
   }
 }
 .highlight {
-  background-color: rgba(124, 69, 234, 0.06);
+  background-color: var(--table-row-highlight-background-color);
 }
+
 .hover-show {
   .show-target {
     transition: all 0.3s cubic-bezier(0.685, 0.0473, 0.346, 1);
