Override metric risk per experiment (#768)
* initial

* implement metric overrides, modify query

* metric rightrail formatting

* fix metric mutations

* new UI for metric conversion window overrides

* skip payload, use value

* cleanup

* clone metrics to avoid unwanted mutation

* types for cloned objects

* address feedback

* address feedback

* Switch to useFieldArray for metric overrides form

* add activation metric to modal

* remove duplicate metrics from dropdown

* conversion window tooltip

* Update tooltip text for conversion window, UI tweaks to the metric list on experiment pages

* improve styling for metric graph axis (#743)

* 597: Experiment import modal improvements: add link to edit query (#747)

* initial

* open query dropdown on visit

* 597: Experiment import modal improvements: add link to edit query (hotfix length) (#748)

* hotfix open index modal array length

* 598: Experiment import modal improvements: Query refresh (#749)

* refresh datasource queries on save

* only refresh query when changed

* Expand supported fields in config.yml import/export (#755)

* updates config generation to include all org settings, all datasources and datasource settings, and more metrics.

* add link to webhooks example (#757)

* feature wall

* address feedback / disabled style

* cursor not-allowed

* support additional risk metric overrides

* fix disabled

* fix commercial feature check

* style updates

* some refactor and validation

* apply overrides to results/reports, block form submits on error

* address feedback

Co-authored-by: Jeremy Dorn <jeremy@jeremydorn.com>
Co-authored-by: Michael Knowlton <michael@growthbook.io>
Co-authored-by: Tina Holly <113377031+tinahollygb@users.noreply.github.com>

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -2004,4 +2004,11 @@ td.disabled {
   }
 }
 
+.form-group.metric-override {
+  .form-control::placeholder {
+    font-style: italic;
+    opacity: 0.75;
+  }
+}
+
 @import "./components/react-select.scss";
