--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -1978,6 +1978,10 @@ html {
   }
 }
 
+.bg-disabled {
+  background: var(--disabled-background);
+}
+
 tr.disabled,
 td.disabled {
   background: var(--disabled-background);
