Self serve license key UI (#850)
* initial, mostly working

* adjust ui

* license key registration on app load working, ui tweaks, docs

* fix hooks for initial license load

* address feedback

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -1987,6 +1987,10 @@ html {
   }
 }
 
+.bg-disabled {
+  background: var(--disabled-background);
+}
+
 tr.disabled,
 td.disabled {
   background: var(--disabled-background);
