--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -493,6 +493,7 @@ pre {
   border: 1px solid var(--border-color-100);
   margin-bottom: 1em;
   border-radius: 5px;
+  overflow-x: auto;
 
   td {
     vertical-align: middle;
