Event Webhook detail page with logs (#821)
* one plop to rule them all

* prefix package name to plop description

* move existing webhooks page to a directory

* code gen: support next.js page

* rename folder

* fix next-page path for plop

* purple badge similar to multi-select style

* useIconForState() hook

* add SimpleTooltip component & useCopyToClipboard hook to separate presentation from behaviour for copy to clipboard UI & behaviour

* event webhook detail info: last run state, events list, copy secret, URL, title

* show story example with lots of events

* require organizationId when retrieving EventWebHook by ID

* endpoint to get event webhook by ID

* get event webhook by ID for detail page

* better story for copy feedback

* fix knob bugs

* fix icon for dark mode

* use fragment for story

* event webhook logs fetched from API & displayed in a table

* fix tooltip story for dark mode

* render active log item

* delete EventWebHookLogs stories because it wont load in storybook due to next/dynamic

* add more events to the latest run log

* add breadcrumb to ewh detail page

* add empty state for event webhook run logs

* add black troubleshooting to contrib readme

* run lint

* PR suggestion: use _.keyBy instead of Array.reduce

* clean up dead code

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -160,6 +160,11 @@ pre {
   @include badge-variant(#f6f7f9);
   border: 1px solid colors.$gray4;
 }
+.badge-purple {
+  background-color: var(--form-multivalue-background-color);
+  color: var(--form-multivalue-text-color);
+}
+
 .multi-select-container {
   z-index: 99999999;
 }
@@ -179,8 +184,9 @@ pre {
   }
 }
 .highlight {
-  background-color: rgba(124, 69, 234, 0.06);
+  background-color: var(--table-row-highlight-background-color);
 }
+
 .hover-show {
   .show-target {
     transition: all 0.3s cubic-bezier(0.685, 0.0473, 0.346, 1);
