Tag projects to datasources and metrics (#824)
* initial

* blocking datasources and metrics based on project in various views

* fix typescript implied never

* small refactor

* add faster datasources and metrics lookup

* inverting relationship, initial steps

* progress

* progress

* start removing old code

* convert most pages/forms to new structure

* progress

* filtering on datasource and metrics pages

* fix segment filter

* fix/adjust datasources dates

* progress

* wip

* Created C# docs page (#762)

* Created csharp page
Co-authored-by: Alexandru Mitu

* Confirmation step before accepting invitation (#789)

* Added SQL replacement variables to dimensions and segments (#808)

* Added a project drop down to the add feature modal (#810)

* Add support for deleting saved groups (#796)

* Fixed GB dev container setup (#823)

* Fix for session expiration error (#825)

* progress

* move ds & m permissions to project

* move ds & m permissions to project

* fix some of the ts and project-specific permission checks

* fine tune permissions implementation

* adjust permission checks

* 403->404

* change multiselect customclassname field implementation

* lint

* wip address feedback

* address feedback

* linting

* update runQueries checks

* more permissions fixes

* default permission

* address feedback

* Self serve license key UI (#850)

* initial, mostly working

* adjust ui

* license key registration on app load working, ui tweaks, docs

* fix hooks for initial license load

* address feedback

* address some feedback

* address more feedback

* address feedback

* address feedback, tags/badges

* remove filtering on NewExperimentForm

* cleanup

* cleanup

* clean up eslint imports

* addressing feedback

* addressing feedback

* revert nesting changes for env.mdx

* model cleanup methods for deleteProject

* filter metrics, datasour

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -164,6 +164,15 @@ pre {
   background-color: var(--form-multivalue-background-color);
   color: var(--form-multivalue-text-color);
 }
+.badge-ellipsis {
+  max-width: 250px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  &.short {
+    max-width: 120px;
+  }
+}
 
 .multi-select-container {
   z-index: 99999999;
@@ -2034,6 +2043,14 @@ td.disabled {
   .form-control::placeholder {
     font-style: italic;
     opacity: 0.75;
+  }
+}
+.form-group.label-overflow-ellipsis {
+  .gb-multi-select__multi-value__label {
+    max-width: 200px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
 
