Initial UI for creating/editing/deleting SDK Connections

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -1058,6 +1058,9 @@ pre {
 .bg-purple {
   background: colors.$highlight-purple;
 }
+.bg-purple-light {
+  background: colors.$highlight-purple-light;
+}
 
 .change-bar {
   align-items: center;
