--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -653,6 +653,9 @@ pre {
 
 .nav-link {
   padding: 0.3rem 0.8rem;
+  @media (max-width: 520px) {
+    padding: 0.3rem 0.4rem;
+  }
 }
 .nav-underlined .nav-link.active,
 .nav-underlined .show > .nav-link {
