--- a/packages/back-end/src/templates/email/pending-member-approval.jinja
+++ b/packages/back-end/src/templates/email/pending-member-approval.jinja
@@ -10,6 +10,6 @@
 {% endblock %}
 
 {% block top %}
-  <p style='text-align:center; margin: 0 0 30px;'>You're all set to start using GrowthBook with {{organization}}</p>
+  <p style='text-align:center; margin: 20px 0 30px;'>You&apos;re all set to start using GrowthBook with {{organization}}</p>
   {{ utils.button("Visit GrowthBook", mainUrl) }}
 {% endblock %}
