--- a/packages/back-end/src/templates/email/pending-member.jinja
+++ b/packages/back-end/src/templates/email/pending-member.jinja
@@ -6,11 +6,11 @@
 {% endblock %}
 
 {% block title %}
-  New User Requesting to Join {{ organization }} on GrowthBook
+  A new user is requesting to join {{ organization }} on GrowthBook
 {% endblock %}
 
 {% block top %}
-  <p>
+  <p style='margin: 0 0 20px;'>
     Name: <strong>{{ name }}</strong><br/>
     Email: <strong>{{ email }}</strong><br/>
   </p>
