--- a/packages/back-end/src/templates/email/pending-member-approval.jinja
+++ b/packages/back-end/src/templates/email/pending-member-approval.jinja
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block title %}
-  You've been approved as a member with {{ organization }} on GrowthBook
+  You&apos;ve been approved as a member with {{ organization }} on GrowthBook
 {% endblock %}
 
 {% block top %}
