Move SDK Connections to open api

--- a/plop-templates/back-end/api/get.hbs
+++ b/plop-templates/back-end/api/get.hbs
@@ -1,5 +1,5 @@
 import { z } from "zod";
-import { Get{{pascalCase object}}Response } from "../../../types/api";
+import { Get{{pascalCase object}}Response } from "../../../types/openapi";
 import { 
   find{{pascalCase object}}ById, 
   to{{pascalCase object}}ApiInterface 
