--- a/plop-templates/back-end/api/list.hbs
+++ b/plop-templates/back-end/api/list.hbs
@@ -1,5 +1,5 @@
 import { z } from "zod";
-import { List{{pascalCase object}}sResponse } from "../../../types/api";
+import { List{{pascalCase object}}sResponse } from "../../../types/openapi";
 import { 
   find{{pascalCase object}}sByOrganization, 
   to{{pascalCase object}}ApiInterface 
